refactor: code refactor
Signed-off-by: Bartosz Czyż <czyzbartosz3@gmail.com>